--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="row mt-2 pt-2 g-5">
                         <div class="col-12 col-lg-6 text-center">
-                            <img class="img-fluid" src="images/IMG_3562 1.png" alt="" />
+                            <img class="img-fluid" src="images/mig3.jpg" alt="" />
                         </div>
                         <div class="col-12 col-lg-6 text-center text-lg-start mt-lg-5">
                             <h5>Flittig, kreativ, resultatorienteret</h5>
@@ -173,7 +173,7 @@
                     <div class="row justify-content-center justify-content-lg-start g-5 mt-2 pt-2 mb-2 pb-2 mt-lg-2 pt-lg-2 mb-lg-5 pb-lg-5">
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.png" alt="" />
+                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
