--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.png" alt="" />
+                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                     <div class="row justify-content-center justify-content-lg-start g-5 mt-4 pt-4 mb-5 pb-5 mt-lg-5 pt-lg-5 mb-lg-5 pb-lg-5">
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.png" alt="" />
+                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
