Converted images to .WebP Format

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-5 text-center text-lg-start">
-                            <img class="float-lg-end" id="titleImage" src="images/mig2.png" alt="" />
+                            <img class="float-lg-end" id="titleImage" src="images/mig2.webp" alt="" />
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="row mt-2 pt-2 g-5">
                         <div class="col-12 col-lg-6 text-center">
-                            <img class="img-fluid" src="images/mig3.jpg" alt="" />
+                            <img class="img-fluid" src="images/mig3.webp" alt="" />
                         </div>
                         <div class="col-12 col-lg-6 text-center text-lg-start mt-lg-5">
                             <h5>Flittig, kreativ, resultatorienteret</h5>
@@ -173,7 +173,7 @@
                     <div class="row justify-content-center justify-content-lg-start g-5 mt-2 pt-2 mb-2 pb-2 mt-lg-2 pt-lg-2 mb-lg-5 pb-lg-5">
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
+                                <img class="img-fluid" src="images/landingpage.webp" alt="" />
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
@@ -217,7 +217,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
+                                <img class="img-fluid" src="images/landingpage.webp" alt="" />
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                     <div class="row justify-content-center justify-content-lg-start g-5 mt-4 pt-4 mb-5 pb-5 mt-lg-5 pt-lg-5 mb-lg-5 pb-lg-5">
                         <div class="col-12 col-lg-6">
                             <div class="your_frame">
-                                <img class="img-fluid" src="images/landingpage.jpg" alt="" />
+                                <img class="img-fluid" src="images/landingpage.webp" alt="" />
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
