Added mobile preview for projects

--- a/index.html
+++ b/index.html
@@ -171,9 +171,12 @@
                         <div class="col text-center text-lg-start"><h5>PROJEKTER</h5></div>
                     </div>
                     <div class="row justify-content-center justify-content-lg-start g-5 mt-2 pt-2 mb-2 pb-2 mt-lg-2 pt-lg-2 mb-lg-5 pb-lg-5">
-                        <div class="col-12 col-lg-6">
+                        <div class="col-12 col-lg-6 d-flex">
                             <div class="your_frame">
                                 <img class="img-fluid" src="images/landingpage.webp" alt="" />
+                            </div>
+                            <div class="mobile_frame mx-3">
+                                <img class="img-fluid" src="images/landingpagemobile.png" alt="" />
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
