--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                                 </div>
                                 <div class="col-12 mt-4 text-center text-lg-start">
                                     <p>
-                                        Flittig, kreativ, resultatorienteret udvikler med interesse i kommercielle produkter og med flair for front-end, back-end samt design. I min fritid er jeg
-                                        fysisk aktiv og dyrker friluftslivet.
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
+                                        that it has a more-or-less normal distribution
                                     </p>
                                 </div>
                                 <div class="row gx-3 g-lg-0 text-nowrap justify-content-center justify-content-lg-start mt-4">
@@ -148,8 +148,8 @@
                         <div class="col-12 col-lg-6 text-center text-lg-start mt-lg-5 pt-3">
                             <h5>Flittig, kreativ, resultatorienteret</h5>
                             <p class="mt-4 text-center text-lg-start">
-                                Flittig, kreativ, resultatorienteret udvikler med interesse i kommercielle produkter og med flair for front-end, back-end samt design. I min fritid er jeg fysisk aktiv
-                                og dyrker friluftslivet. Flittig, kreativ, resultatorienteret udvikler med interesse i kommercielle produkter.
+                                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it
+                                has a more-or-less normal distribution
                             </p>
                             <div class="row gx-3 g-lg-0 text-nowrap justify-content-center justify-content-lg-start mt-4">
                                 <div class="col-6 col-sm-auto"><p class="textbox trait">Friluftsliv 🏕️</p></div>
@@ -176,7 +176,8 @@
                             <div class="col-lg-12 text-center text-lg-start"><h5>Landingpage for virksomhed</h5></div>
                             <div class="col-12 text-center text-lg-start">
                                 <p>
-                                    Flittig, kreativ, resultatorienteret udvikler med interesse i kommercielle produkter og med flair for front-end, back-end samt design. med interesse i kommercielle
+                                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that
+                                    it has a more-or-less normal distribution
                                 </p>
                             </div>
                             <div class="col-12 mt-4 text-center text-lg-start">
