--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
                             <img class="img-fluid" src="images/mig3.webp" alt="" />
                         </div>
                         <div class="col-12 col-lg-6 text-center text-lg-start mt-lg-5 pt-3">
-                            <h5>Flittig, kreativ, resultatorienteret</h5>
+                            <h5>Produktiv, kreativ, resultatorienteret</h5>
                             <p class="mt-4 text-center text-lg-start">
                                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it
                                 has a more-or-less normal distribution
                             </p>
                             <div class="row gx-3 g-lg-0 text-nowrap justify-content-center justify-content-lg-start mt-4">
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Friluftsliv 🏕️</p></div>
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Træning 🏋🏼</p></div>
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Hundetræning 🦮</p></div>
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Cykling 🚴🏼‍♂️</p></div>
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Netflix 🎬</p></div>
-                                <div class="col-6 col-sm-auto"><p class="textbox trait">Læring 🧠</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🏕️</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🏋🏼</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🦮</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🚴🏼‍♂️</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🎬</p></div>
+                                <div class="col-6 col-sm-auto"><p class="textbox trait">Lorem Ipsum 🧠</p></div>
                             </div>
                         </div>
                     </div>
