--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                     <div class="row g-5 mt-2">
                         <div class="col-12 col-lg-6 text-center">
-                            <img class="img-fluid" src="images/mig3.webp" alt="" />
+                            <img class="img-fluid rounded-4" src="images/mig6.webp" alt="" />
                         </div>
                         <div class="col-12 col-lg-6 text-center text-lg-start mt-lg-5 pt-3">
                             <h5>Produktiv, kreativ, resultatorienteret</h5>
