--- a/index.html
+++ b/index.html
@@ -424,6 +424,9 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 mt-4 text-center text-lg-start">
+                        <p class="fw-bolder text-black">
+                            Ude af drift grundet public API KEY på github.
+                        </p>
                         <form
                             action="https://api.web3forms.com/submit"
                             method="POST"
@@ -465,7 +468,8 @@
                             <input
                                 type="hidden"
                                 name="access_key"
-                                value="bc0fa6e1-4bc7-4677-a547-de0a543adc69
+                                value="c6b44557-1aad-4d75-9491-dd18426a23a4
+9
 " />
                             <div class="col-12">
                                 <button
