--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
                             <div class="col-12 mt-5 text-center text-lg-start">
                                 <a
                                     target="_blank"
-                                    href="https://esbenvh.github.io/Bootstrap-Landingpage/"
+                                    href="https://esbenchristensen.github.io/Bootstrap-Landingpage/"
                                     ><button class="btn btn-outline-dark rounded-3 px-3 py-2">
                                         <i class="bi bi-display"></i> Live demo
                                     </button></a
                                 >
                                 <a
                                     target="_blank"
-                                    href="https://github.com/esbenvh/Bootstrap-Landingpage"
+                                    href="https://github.com/esbenchristensen/Bootstrap-Landingpage"
                                     ><button class="btn btn-outline-dark mx-3 rounded-3 px-3 py-2">
                                         <i class="bi bi-github"></i> Se koden
                                     </button></a
