--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                         <p class="textbox trait">Produktiv 🚀</p>
                                     </div>
                                     <div class="col-6 col-sm-auto">
-                                        <p class="textbox trait">Team Player ⚽️</p>
+                                        <p class="textbox trait">Detaljeorienteret 👁️</p>
                                     </div>
                                     <div class="col-auto col-sm-auto">
                                         <p class="textbox trait">Resultatorienteret 🎯</p>
