--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                             <input
                                 type="hidden"
                                 name="redirect"
-                                value="http://127.0.0.1:5500/succes.html" />
+                                value="http://ecdev.dk/succes.html" />
                             <input
                                 type="hidden"
                                 name="access_key"
