--- a/index.html
+++ b/index.html
@@ -464,12 +464,11 @@
                             <input
                                 type="hidden"
                                 name="redirect"
-                                value="https://www.ecdev.dk/succes.html" />
+                                value="https://ecdev.dk/succes.html" />
                             <input
                                 type="hidden"
                                 name="access_key"
-                                value="bc0fa6e1-4bc7-4677-a547-de0a543adc69
-" />
+                                value="bc0fa6e1-4bc7-4677-a547-de0a543adc69" />
                             <div class="col-12">
                                 <button
                                     class="btn btn-dark w-100 formbtn"
