--- a/succes.html
+++ b/succes.html
@@ -16,21 +16,19 @@
     </head>
 
     <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
         <main>
             <div class="row justify-content-center align-items-center g-2">
                 <div class="col text-center">
                     <h1 class="fw-bold text-center mt-5 pt-5">Din besked er sendt. ✉️</h1>
                     <h1 class="fw-light text-center mt-4">Jeg vender tilbage hurtigst muligt 👋</h1>
-                    <a href="index.html"><button class="btn btn-dark btn-lg px-5 py-3 rounded-4 mt-5">Gå tilbage</button></a>
+                    <a href="index.html"
+                        ><button class="btn btn-dark btn-lg px-5 py-3 rounded-4 mt-5">
+                            Gå tilbage
+                        </button></a
+                    >
                 </div>
             </div>
         </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
